[gd_scene load_steps=12 format=3 uid="uid://ce08jq104f0hx"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_q26hh"]
[ext_resource type="Script" path="res://Scripts/sprite_3d.gd" id="2_7otgp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_it80k"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_dxibw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ocf0q"]
radius = 0.529196
height = 2.11522

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h6rii"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_8oggc"]

[sub_resource type="CanvasTexture" id="CanvasTexture_4nsno"]

[sub_resource type="Animation" id="Animation_6kewb"]
resource_name = "Dead_enemy"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.57952, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1dtsr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ecwsy"]
_data = {
"Dead_enemy": SubResource("Animation_6kewb"),
"RESET": SubResource("Animation_1dtsr")
}

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_q26hh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_it80k")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_dxibw")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="Area3D" type="Area3D" parent="." groups=["death"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_ocf0q")

[node name="Timer" type="Timer" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0405945, 1.05805, 0)
material_override = SubResource("StandardMaterial3D_h6rii")
modulate = Color(1, 0, 0, 1)
texture = SubResource("CanvasTexture_8oggc")
script = ExtResource("2_7otgp")

[node name="Sprite3D2" type="Sprite3D" parent="."]
modulate = Color(0, 1, 0, 1)
texture = SubResource("CanvasTexture_4nsno")
script = ExtResource("2_7otgp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ecwsy")
}

[connection signal="body_entered" from="Area3D" to="." method="_playerDeath"]
[connection signal="body_entered" from="Area3D" to="." method="_hit"]
[connection signal="body_exited" from="Area3D" to="." method="_noHit"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_dead_enemy"]
